unpackaged/main/default/objects/Account_Service_Role__c/fields/Account_Service_End_Reason__c.field-meta.xml
<CustomField>
    <fullName>Account_Service_End_Reason__c</fullName>
    <label>Account Service End Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No longer associated with Account</fullName>
            </value>
            <value>
                <fullName>No longer employed with/working with the Sponsor</fullName>
            </value>
            <value>
                <fullName>No longer volunteering for ARC</fullName>
            </value>
            <value>
                <fullName>Temporary leave/Leave of Absence</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Do Not Contact Selected-ARC Decision</fullName>
                <isActive>false</isActive>
                <label>Do Not Contact Selected-ARC Decision</label>
            </value>
            <value>
                <fullName>Do Not Contact Selected-Contact Decision</fullName>
                <isActive>false</isActive>
                <label>Do Not Contact Selected-Contact Decision</label>
            </value>
            <value>
                <fullName>Do Not Contact Selected-Deceased</fullName>
                <isActive>false</isActive>
                <label>Do Not Contact Selected-Deceased</label>
            </value>
            <value>
                <fullName>No Longer Employed</fullName>
                <isActive>false</isActive>
                <label>No Longer Employed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>