unpackaged/main/default/objects/Account_Service_Role__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can&#39;t add inactive contact</errorMessage>
        <filterItems>
            <field>Contact.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Service Roles</relationshipLabel>
    <relationshipName>Account_Contact_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>