unpackaged/main/default/objects/Account_Service_Role__c/fields/Unique_Fields_Combination__c.field-meta.xml
<CustomField>
    <fullName>Unique_Fields_Combination__c</fullName>
    <description>Combine Account+contact+role+start date to identify duplicates in matching rules</description>
    <label>Unique Fields Combination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>