unpackaged/main/default/objects/Account_Service_Role__c/validationRules/Reason_Must_have_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Must_have_End_Date</fullName>
    <active>true</active>
    <description>User cannot populate the Lost_Reason__c field or the Account_Service_End_Reason__c if the End Date is not populated.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Lost_Reason__c)),
ISBLANK(End_Date__c)
)

|| 

AND(
NOT(ISPICKVAL(Account_Service_End_Reason__c, &quot;&quot;)),
ISBLANK(End_Date__c)
)</errorConditionFormula>
    <errorMessage>In order to enter an Account Service End Reason and/or a Lost Reason, an End Date must be selected.</errorMessage>
</ValidationRule>