unpackaged/main/default/objects/Account_Service_Role__c/validationRules/Require_Reason_if_End_Date_is_populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Reason_if_End_Date_is_populated</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNULL(End_Date__c) )  &amp;&amp;   ISPICKVAL(Account_Service_End_Reason__c, &quot;&quot;)</errorConditionFormula>
    <errorMessage>In order to enter an End Date, please select a Account Service End Reason.</errorMessage>
</ValidationRule>